enlarged button, removed images from repo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 
-		<div class="site-wrapper" style="background-image:url(images/landing_page2.png)">
+		<div class="site-wrapper">
 			<div class="site-wrapper-inner">
 				<div>
 					<div class="masthead clearfix">
