--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 		<!-- Custom stylesheets -->
 		<link rel="stylesheet" type="text/css" href="css/cover.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 		
 	</head>
@@ -41,11 +42,11 @@
 					</div>
 
 					<div class="inner cover">
-						<h1 class="cover-heading">FELIX</h1>
+						<h1 class="cover-heading" style="font-family: 'Comic Sans MS',cursive,sans-serif;">FELIX</h1>
 						<!-- <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.
 						</p> -->
 						<p class="lead">
-							<a href="#" class="btn btn-lg">ENTER</a>
+							<a href="#" class="btn btn-lg" style="font-family:'Comic Sans MS',cursive,sans-serif;">ENTER</a>
 						</p>
 					</div>
 
