fucked up my slash

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.
 						</p> -->
 						<p class="lead">
-							<a href="\home.html" class="btn btn-lg" style="font-family:'Comic Sans MS',cursive,sans-serif;">ENTER</a>
+							<a href="home.html" class="btn btn-lg" style="font-family:'Comic Sans MS',cursive,sans-serif;">ENTER</a>
 						</p>
 					</div>
 
