--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-              <img alt="Brand" src="image/brandimage.jpg"></a>
+              <img alt="Brand" src="images/brandimage.jpg"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
