added carousel image to home, changed landing page typeface to monoton

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<!-- Custom stylesheets -->
 		<link rel="stylesheet" type="text/css" href="css/cover.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+        
+        <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+
 
 		
 	</head>
@@ -42,11 +45,11 @@
 					</div>
 
 					<div class="inner cover">
-						<h1 class="cover-heading" style="font-family: 'Comic Sans MS',cursive,sans-serif;">FELIX</h1>
+						<h1 class="cover-heading" style="font-family: 'Monoton'">FELIX</h1>
 						<!-- <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.
 						</p> -->
 						<p class="lead">
-							<a href="home.html" class="btn btn-lg" style="font-family:'Comic Sans MS',cursive,sans-serif;">ENTER</a>
+							<a href="home.html" class="btn btn-lg" style="font-family:'SourceSansPro',cursive,">ENTER</a>
 						</p>
 					</div>
 
