--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
          <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="5000" data-wrap="true">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false" data-wrap="true">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
